# Orchid

./: .gitignore  .travis.yml  LICENSE  Orchid.cabal  README.md  grammar.txt  stack.yaml
bench/: Main.hs  tail_rec.orc
examples/: class.orc  factorial_io.orc  fast_power.orc  inheritance.orc  io.orc  power.orc  rectangle.orc  sum.orc  virtual.orc
src/: native-prelude.ll  prelude.orc
src/Orchid/: Codegen.hs  Compiler.hs  Error.hs  Executor.hs  Lexer.hs  ParsecToken.hs  Parser.hs  TailAccumulator.hs  Token.hs  Translator.hs  Types.hs
src/Orchid/Codegen/: Body.hs  Common.hs  Constant.hs  Module.hs  Type.hs
src/app/: Main.hs  Options.hs
test/Orchid/: Arbitrary.hs  CompilerSpec.hs  LexerSpec.hs  ParserSpec.hs  Util.hs
test/Test/Orchid/: Arbitrary.hs  CompilerSpec.hs  Data.hs  LexerSpec.hs  ParserSpec.hs  Util.hs
test/data/: class.orc  class_method_inside.orc  error.orc  factorial.orc  factorial_huge.orc  fib.orc  global_var.orc  inheritance.orc  mutually_recursive.orc  new.orc  new_class.orc  pointer.orc  private.orc  private_method_inside.orc  private_method_outside.orc  private_var_inside.orc  shape.orc  type_error.orc
