name:                  Orchid
version:               0.1.0.0
synopsis:              Compiler for Orchid programming language
license:               MIT
license-file:          LICENSE
author:                Ivan Gromakovskii
build-type:            Simple
cabal-version:         >=1.18

library
  exposed-modules:     Orchid.Codegen
                     , Orchid.Error
                     , Orchid.Lexer
                     , Orchid.Parser
                     , Orchid.Token
                     , Orchid.Translator
                     , Orchid.Types
  other-modules:       Orchid.ParsecToken
  build-depends:       base >= 4.8
                     , containers
                     , lens
                     , llvm-general
                     , llvm-general-pure
                     , mtl
                     , parsec
                     , safe
                     , serokell-core
                     , string-conversions
                     , text
                     , text-format
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

executable orchid
  main-is:             Main.hs
  other-modules:       Options
  build-depends:       base >= 4.8
                     , optparse-applicative
                     , Orchid
  hs-source-dirs:      src/app
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

test-suite orchid-test
  main-is:             Test.hs
  other-modules:       Orchid.Arbitrary
                       Orchid.LexerSpec
                       Orchid.ParserSpec
                       Spec
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.8
                     , hspec
                     , Orchid
                     , QuickCheck
                     , text
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -O0 -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
